TP-Transformer with KAN

--- a/research notebooks/Tokenize and Preprocess.ipynb
+++ b/research notebooks/Tokenize and Preprocess.ipynb
@@ -9,7 +9,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 15,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Preprocessed data saved to preprocessed_2.txt\n"
+          ]
+        }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Load the preprocessed CSV\n",
+        "csv_path = 'processed_2.csv'\n",
+        "df = pd.read_csv(csv_path)\n",
+        "\n",
+        "# Clean the DataFrame\n",
+        "df['text'] = df['text'].astype(str).replace('nan', '')\n",
+        "df['label'] = df['label'].astype(str).replace('nan', '')\n",
+        "\n",
+        "# Combine text and label into a list\n",
+        "all_texts = df['text'].tolist() + df['label'].tolist()\n",
+        "\n",
+        "# Save to a text file\n",
+        "output_txt_path = 'preprocessed_2.txt'\n",
+        "with open(output_txt_path, 'w', encoding='utf-8') as f:\n",
+        "    for text in all_texts:\n",
+        "        if text:  # Skip empty strings\n",
+        "            f.write(text + '\\n')\n",
+        "\n",
+        "print(f\"Preprocessed data saved to {output_txt_path}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
       "metadata": {
         "id": "M35cdK1oqK88"
       },
@@ -39,7 +76,7 @@
         "    special_tokens=[\"[CLS]\", \"[SEP]\", \"[PAD]\", \"[MASK]\" , \"[STATE_ID]\"]\n",
         ")\n",
         "\n",
-        "files = [\"../QED_data/QED_data.txt\"]\n",
+        "files = [\"preprocessed_2.txt\"]\n",
         "\n",
         "tokenizer.train(files, trainer)\n",
         "\n",
@@ -48,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -65,7 +102,7 @@
               " 'custom_tokenizer\\\\tokenizer.json')"
             ]
           },
-          "execution_count": 32,
+          "execution_count": 29,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -86,7 +123,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "512"
+            ]
+          },
+          "execution_count": 23,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -96,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -128,37 +183,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 25,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "go-_o4h27V_3",
-        "outputId": "8b6902f4-6ba7-49fb-cf36-4c278b1683f3"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "{'input_ids': tensor([  1,  24, 189, 158,  33, 424, 207,   6,  30,   7, 107,  82, 189, 219,\n",
-            "         33, 496, 193,   6,  30,   7, 169, 201,  33,  65,  33,   4,   6,  30,\n",
-            "          7, 107, 201,  33, 199,  33,   4,   6,  30, 139,  98,  33,  13,  82,\n",
-            "          6,   2]), 'attention_mask': tensor([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-            "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]), 'labels': tensor([  1,   5,  65,  33, 115,  87, 215,  71,  49,  33,  16,  89,  53, 248,\n",
-            "         46,  33, 112,  32,  15,  61,  67,  51,  33, 108,  61, 114,   8,  51,\n",
-            "         33,  86,  61,  67,  51,  33, 103,  61,  67,  94,  33,  95,   7, 110,\n",
-            "         67,   2])}\n"
-          ]
-        }
-      ],
       "source": [
         "import pandas as pd\n",
         "from datasets import Dataset, DatasetDict\n",
@@ -172,7 +199,7 @@
         "tokenizer.pad_token = tokenizer.eos_token if tokenizer.eos_token is not None else \"[PAD]\"\n",
         "\n",
         "# ✅ Load the dataset\n",
-        "csv_path = '../QED_data/processed_dataset.csv'\n",
+        "csv_path = 'processed_2.csv'\n",
         "df = pd.read_csv(csv_path)\n",
         "\n",
         "# ✅ Clean the DataFrame\n",
@@ -182,10 +209,120 @@
         "\n",
         "# ✅ Split into train, validation, and test sets\n",
         "train_df, test_df = train_test_split(df, test_size=0.2, random_state=42)\n",
-        "train_df, val_df = train_test_split(train_df, test_size=0.1, random_state=42)\n",
+        "train_df, val_df = train_test_split(train_df, test_size=0.1, random_state=42)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 42,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "go-_o4h27V_3",
+        "outputId": "8b6902f4-6ba7-49fb-cf36-4c278b1683f3"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'input_ids': tensor([  1,  22,  90,  93, 171,  35, 142,  35, 498, 138,   6,  30,   7,  94,\n",
+            "        171,  35, 123,  35, 221, 440,   6,  30,   7, 157,  94, 171,  35, 142,\n",
+            "         35, 445, 217,   6,  30, 135,  94, 171,  35,  95,  35, 452, 189,   6,\n",
+            "         30, 135, 119,  35,  13,  94, 171,   6,  30,   7,  94, 171,   6,  30,\n",
+            "          7,  77,   6,  30,   7, 119,  35,  12,  94, 171,   6,  30,   7,  94,\n",
+            "        171,   6,  30,   7,  77,   6,  30,   7,  76,  13,  11,  21,   8,  43,\n",
+            "          8,  40,  34,  14,   8, 106, 155, 121,  35, 211, 197,  21,  71,  74,\n",
+            "         35,  17, 233, 186,  35,   4,  35,   4,  71,  74,  35,  17, 233, 200,\n",
+            "         35,   4,  35,   4,  57,   8, 106, 124, 121,  35, 211, 197,  21,  71,\n",
+            "         74,  35,  17, 233, 177,  35,   4,  35,   4,  71, 123,  35, 199, 411,\n",
+            "         35,   4,  35,   4,  57,   8,  37,  72,  43,  35, 164, 146,  13,  71,\n",
+            "         74,  35,  17, 233, 200,  35,   4,  35,   4, 125,  30,  84,  55,   8,\n",
+            "         37,  72,  46,  35, 164,  18, 177,  71,  74,  35,  17, 233, 177,  35,\n",
+            "          4,  35,   4, 125,  30,  84,  55, 139,  37,  72,  44,  35, 164, 146,\n",
+            "         13,  71, 123,  35, 199, 411,  35,   4,  35,   4, 125,  30,  84,  55,\n",
+            "          8,  37,  72,  45,  35, 164,  18, 177,  71,  74,  35,  17, 233, 186,\n",
+            "         35,   4,  35,   4, 125,  30,  84,  55, 224,  30,  78,  52,  35,  87,\n",
+            "         68, 133,  35, 103,  68, 167,  35, 102,   7,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2]), 'attention_mask': tensor([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+            "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+            "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+            "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+            "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+            "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+            "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+            "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+            "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+            "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+            "        1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+            "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+            "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+            "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+            "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+            "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+            "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+            "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+            "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+            "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+            "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+            "        0, 0, 0, 0, 0]), 'labels': tensor([  1,  20,  11, 143,   8,  40,  34,  16,  96,  47,  35,  37,  34,  16,\n",
+            "         68,  76,  13,  11,  14,   8,  47,  35,  37,  34,  14,   8,  52,  35,\n",
+            "         87,  68, 140,  11,  14,   8,  52,  35, 114,   8,  52,  35,  86,  68,\n",
+            "         76,  13,  11,  14,   8,  47,  35,  37,  34,  14,   8,  52,  35, 117,\n",
+            "         68, 140,  11,  14,   8,  52,  35,  97,   8,  52,  35, 116, 163,  52,\n",
+            "         35, 111,  68, 132,  14,  78,  52,  35,  87,  68, 133,  35, 103,  68,\n",
+            "        167,  35, 102, 151,  14,   7,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "          2])}\n"
+          ]
+        }
+      ],
+      "source": [
         "\n",
-        "# ✅ Tokenization Function\n",
-        "MAX_LENGTH = 44\n",
+        "\n",
+        "MAX_LENGTH_TEXT = 509  # 99th percentile for text\n",
+        "MAX_LENGTH_LABEL = 421 \n",
         "\n",
         "def tokenize_function(example):\n",
         "    # Ensure inputs are strings and not empty\n",
@@ -197,7 +334,7 @@
         "        text,\n",
         "        padding=\"max_length\",\n",
         "        truncation=True,\n",
-        "        max_length=MAX_LENGTH,\n",
+        "        max_length=MAX_LENGTH_TEXT,\n",
         "        return_tensors=\"np\"\n",
         "    )\n",
         "\n",
@@ -206,7 +343,7 @@
         "        label,\n",
         "        padding=\"max_length\",\n",
         "        truncation=True,\n",
-        "        max_length=MAX_LENGTH,\n",
+        "        max_length=MAX_LENGTH_LABEL,\n",
         "        return_tensors=\"np\"\n",
         "    )\n",
         "\n",
@@ -249,7 +386,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 31,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Sequence length statistics for 'text' column:\n",
+            "Max sequence length (text): 534\n",
+            "90th percentile (text): 482.0\n",
+            "95th percentile (text): 493.0\n",
+            "99th percentile (text): 509.0\n",
+            "\n",
+            "Sequence length statistics for 'label' column:\n",
+            "Max sequence length (label): 421\n",
+            "90th percentile (label): 351.0\n",
+            "95th percentile (label): 413.0\n",
+            "99th percentile (label): 418.0\n"
+          ]
+        }
+      ],
+      "source": [
+        "text_lengths = [len(tokenizer(text, add_special_tokens=True)['input_ids']) for text in df['text'].tolist()]\n",
+        "label_lengths = [len(tokenizer(label, add_special_tokens=True)['input_ids']) for label in df['label'].tolist()]\n",
+        "\n",
+        "# Print statistics for text\n",
+        "print(\"Sequence length statistics for 'text' column:\")\n",
+        "print(f\"Max sequence length (text): {max(text_lengths)}\")\n",
+        "print(f\"90th percentile (text): {np.percentile(text_lengths, 90)}\")\n",
+        "print(f\"95th percentile (text): {np.percentile(text_lengths, 95)}\")\n",
+        "print(f\"99th percentile (text): {np.percentile(text_lengths, 99)}\")\n",
+        "\n",
+        "# Print statistics for label\n",
+        "print(\"\\nSequence length statistics for 'label' column:\")\n",
+        "print(f\"Max sequence length (label): {max(label_lengths)}\")\n",
+        "print(f\"90th percentile (label): {np.percentile(label_lengths, 90)}\")\n",
+        "print(f\"95th percentile (label): {np.percentile(label_lengths, 95)}\")\n",
+        "print(f\"99th percentile (label): {np.percentile(label_lengths, 99)}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 43,
       "metadata": {
         "id": "PAyufV7O94fH"
       },
@@ -266,7 +445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 44,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -282,7 +461,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 45,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -299,7 +478,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [
         {
@@ -308,7 +487,7 @@
               "512"
             ]
           },
-          "execution_count": 30,
+          "execution_count": 36,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -319,22 +498,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 46,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "'[SEP]'"
+              "'del 314'"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 46,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "tokenizer.decode([1, 35632, 48766, 9874, 20758, 28768, 11745, 9693, 45096, 43001, 28449, 42744, 19394, 20729, 3068, 43965, 29878, 40972, 46786, 18185, 42672, 4199, 26545, 17362, 36242, 38463, 48635, 7562, 6366, 23576, 47614, 20166, 4413, 15086, 30211, 27408, 1640, 32132, 32393, 17635, 2346, 49387, 22450, 48115])"
+        "tokenizer.decode([123, 567, 812, 345])"
       ]
     },
     {
