--- a/research notebooks/test01.ipynb
+++ b/research notebooks/test01.ipynb
@@ -12399,10 +12399,238 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d:\\\\DecoderKAN\\\\research notebooks'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os \n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique tokens in the dataset: 155357\n",
+      "Sample tokens: ['del_236722_', 'gam_21320_', 'nu_31985', 'sigma_410378', 'mu_102377', 'del_36620_', 'gam_42906_', 'del_81168_', 'l_25115', 'del_147761_', 'gam_109205_', 'l_34779', 'j_147007', 'eta_114853_', 'gam_38106_', 'nu_319170', 'eta_174460_', 'gam_30445_', 'gam_26598_', 'del_125269_']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from tokenizers import Tokenizer, models, pre_tokenizers\n",
+    "\n",
+    "# Load the CSV data\n",
+    "# Replace 'path_to_your_csv.csv' with the actual path to your CSV file\n",
+    "csv_path = \"../QED_data/processed_dataset.csv\"\n",
+    "df = pd.read_csv(csv_path)\n",
+    "\n",
+    "# Assuming the CSV has columns 'input' and 'target' for the process and amplitude\n",
+    "df = df.fillna(\"\")  # Replace NaN with empty string\n",
+    "input_texts = df['text'].astype(str).tolist()  # Convert to string\n",
+    "target_texts = df['label'].astype(str).tolist()  # Convert to string\n",
+    "\n",
+    "# Combine all texts to get a full list of tokens\n",
+    "all_texts = input_texts + target_texts\n",
+    "\n",
+    "# Tokenize the texts using a simple whitespace tokenizer to count unique tokens\n",
+    "tokenizer = Tokenizer(models.BPE())\n",
+    "tokenizer.pre_tokenizer = pre_tokenizers.Whitespace()\n",
+    "\n",
+    "# Flatten all texts into a single list of tokens\n",
+    "all_tokens = set()\n",
+    "for text in all_texts:\n",
+    "    if text:  # Skip empty strings\n",
+    "        tokens = tokenizer.pre_tokenizer.pre_tokenize_str(text)\n",
+    "        all_tokens.update(token[0] for token in tokens)\n",
+    "\n",
+    "# Count unique tokens\n",
+    "print(f\"Number of unique tokens in the dataset: {len(all_tokens)}\")\n",
+    "print(f\"Sample tokens: {list(all_tokens)[:20]}\")  # Print first 20 tokens for inspection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d:\\\\DecoderKAN\\\\research notebooks'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os \n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns in CSV: ['text', 'label']\n",
+      "First few rows of CSV:\n",
+      "                                                 text  \\\n",
+      "0  e_gam_[STATE_ID](X)^(*) e_del_[STATE_ID](X)^(*...   \n",
+      "1  e_gam_[STATE_ID](X)^(*) e_del_[STATE_ID](X)^(*...   \n",
+      "2  e_gam_[STATE_ID](X)^(*) e_del_[STATE_ID](X)^(*...   \n",
+      "3  e_gam_[STATE_ID](X)^(*) e_del_[STATE_ID](X)^(*...   \n",
+      "4  e_gam_[STATE_ID](X)^(*) e_del_[STATE_ID](X)^(*...   \n",
+      "\n",
+      "                                               label  \n",
+      "0  2*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23...  \n",
+      "1  2*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_...  \n",
+      "2  2*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23...  \n",
+      "3  2*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_...  \n",
+      "4  8*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23...  \n",
+      "Number of rows after filtering NaN: 15552\n",
+      "Preprocessed CSV saved to path_to_your_preprocessed_csv.csv\n",
+      "Number of unique tokens in the preprocessed dataset: 173\n",
+      "Sample tokens: ['t_gam', 'b', 'p', '_v', '36', 'k', 'c_eta_', '^', 'e_del_', ')^(-', 'u_beta_', 'eps', 'm_c', '(', 'e_alpha_', 'tt', 'e_eps_', 'tt_gam', '(-', 't']\n",
+      "\n",
+      "Preprocessed first non-empty row:\n",
+      "Input: e_gam_[STATE_ID](X)^(*) e_del_[STATE_ID](X)^(*) to e_eps_[STATE_ID](X) e_eta_[STATE_ID](X) V_1 e(X) e(X) A(X) V_0 e(X) e(X) A(X) -1/2*i*e^2*gamma_{+%\\sigma [STATE_ID] %%%gam [STATE_ID][STATE_ID] %%%gam [STATE_ID][STATE_ID]}*gamma_{%\\sigma [STATE_ID] %%%gam [STATE_ID][STATE_ID] %%%del [STATE_ID][STATE_ID]}*e_{i [STATE_ID] %%%gam [STATE_ID][STATE_ID]}(X)_u*e_{k [STATE_ID] %%%del [STATE_ID][STATE_ID]}(X)_u*e_{l [STATE_ID] %%%gam [STATE_ID][STATE_ID]}(X)_u^(*)*e_{i [STATE_ID] %%%gam [STATE_ID][STATE_ID]}(X)_u^(*)/(X)\n",
+      "Target: 2*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23 + -1/2*m_e^2*s_24 + 1/2*s_12*s_34)*(m_e^2 + -s_13 + 1/2*reg_prop)^(-2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "# Load the CSV data\n",
+    "csv_path = \"processed_2.csv\"  # Replace with your CSV path\n",
+    "df = pd.read_csv(csv_path)\n",
+    "\n",
+    "# Assuming the CSV has columns 'text' and 'target'\n",
+    "print(\"Columns in CSV:\", df.columns.tolist())\n",
+    "print(\"First few rows of CSV:\\n\", df.head())\n",
+    "\n",
+    "# Filter out rows with missing data\n",
+    "df = df.dropna(subset=['text', 'label'])\n",
+    "print(f\"Number of rows after filtering NaN: {len(df)}\")\n",
+    "\n",
+    "# Convert all entries to strings\n",
+    "df['text'] = df['text'].astype(str)\n",
+    "df['label'] = df['label'].astype(str)\n",
+    "\n",
+    "# Function to replace state IDs with a generic [STATE_ID] token\n",
+    "def replace_state_ids(text):\n",
+    "    # Step 1: Simplify repeated [STATE_ID][STATE_ID]_[STATE_ID] patterns\n",
+    "    text = re.sub(r'\\[STATE_ID\\](?:\\[STATE_ID\\]_?)+', '[STATE_ID]', text)\n",
+    "\n",
+    "    # Step 2: Replace existing [STATE_ID] placeholders (ensure consistency)\n",
+    "    text = re.sub(r'\\[STATE_ID\\]', '[STATE_ID]', text)\n",
+    "\n",
+    "    # Step 3: Replace state IDs in formats like _120386_ (e.g., del_120386_)\n",
+    "    text = re.sub(r'(_\\d+_)', ' [STATE_ID]', text)\n",
+    "\n",
+    "    # Step 4: Replace state IDs in particle names (e.g., s_eps_120386, rho_92125, lambda_672809)\n",
+    "    # Expanded list of prefixes\n",
+    "    prefixes = r'(sigma|gam|del|eta|nu|mu|eps|alpha|beta|tau|rho|lambda|t_eps|t_alpha|t_eta|t_gam|e_eps|e_eta|e_beta|s_eps|s_alpha|s_eta|s_gam|s_del|s_beta|c_eps|c_eta|c_beta|c_gam|c_del)'\n",
+    "    text = re.sub(rf'{prefixes}_(\\d+)(?:_\\[STATE_ID\\](?:_\\[STATE_ID\\])?)?', r'\\1 [STATE_ID]', text)\n",
+    "\n",
+    "    # Step 5: Replace state IDs in gamma_{...} (e.g., %\\sigma_454794, %%%eta_125930_[STATE_ID])\n",
+    "    text = re.sub(rf'\\\\({prefixes})_(\\d+)(?:_\\[STATE_ID\\](?:_\\[STATE_ID\\])?)?', r'\\\\\\1 [STATE_ID]', text)\n",
+    "\n",
+    "    # Step 6: Replace indices with state IDs (e.g., i_151807, k_151795, j_151787)\n",
+    "    text = re.sub(r'(j|i|k|l)_(\\d+)', r'\\1 [STATE_ID]', text)\n",
+    "\n",
+    "    # Step 7: Simplify any remaining [STATE_ID]_[STATE_ID] patterns\n",
+    "    text = re.sub(r'\\[STATE_ID\\]_\\[STATE_ID\\]', '[STATE_ID]', text)\n",
+    "\n",
+    "    return text\n",
+    "\n",
+    "# Apply the replacement to input and target columns\n",
+    "df['text'] = df['text'].apply(replace_state_ids)\n",
+    "df['label'] = df['label'].apply(replace_state_ids)\n",
+    "\n",
+    "# Save the preprocessed CSV\n",
+    "preprocessed_csv_path = \"path_to_your_preprocessed_csv.csv\"  # Replace with desired path\n",
+    "df.to_csv(preprocessed_csv_path, index=False)\n",
+    "print(f\"Preprocessed CSV saved to {preprocessed_csv_path}\")\n",
+    "\n",
+    "# Count unique tokens in the preprocessed data\n",
+    "from tokenizers import Tokenizer, models, pre_tokenizers\n",
+    "\n",
+    "input_texts = df['text'].tolist()\n",
+    "target_texts = df['label'].tolist()\n",
+    "all_texts = input_texts + target_texts\n",
+    "\n",
+    "tokenizer = Tokenizer(models.BPE())\n",
+    "tokenizer.pre_tokenizer = pre_tokenizers.Whitespace()\n",
+    "\n",
+    "all_tokens = set()\n",
+    "for text in all_texts:\n",
+    "    if text:\n",
+    "        tokens = tokenizer.pre_tokenizer.pre_tokenize_str(text)\n",
+    "        all_tokens.update(token[0] for token in tokens)\n",
+    "\n",
+    "print(f\"Number of unique tokens in the preprocessed dataset: {len(all_tokens)}\")\n",
+    "print(f\"Sample tokens: {list(all_tokens)[:20]}\")\n",
+    "\n",
+    "# Print the preprocessed version of the first non-empty row for verification\n",
+    "first_non_empty_row = df.iloc[0]\n",
+    "print(\"\\nPreprocessed first non-empty row:\")\n",
+    "print(\"Input:\", first_non_empty_row['text'])\n",
+    "print(\"Target:\", first_non_empty_row['label'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tokenizer_bpe = Tokenizer(models.BPE())\n",
+    "tokenizer_bpe.pre_tokenizer = pre_tokenizers.Whitespace()\n",
+    "\n",
+    "# Train the BPE tokenizer\n",
+    "trainer = trainers.BpeTrainer(vocab_size=1000, special_tokens=[\"[PAD]\", \"[CLS]\", \"[SEP]\"])\n",
+    "tokenizer_bpe.train_from_iterator(all_texts, trainer)\n",
+    "\n",
+    "all_tokens_bpe = set()\n",
+    "for text in all_texts:\n",
+    "    if text:\n",
+    "        encoded = tokenizer_bpe.encode(text)\n",
+    "        all_tokens_bpe.update(encoded.tokens)\n",
+    "\n",
+    "print(f\"Number of unique tokens (BPE tokenization): {len(all_tokens_bpe)}\")\n",
+    "print(f\"Sample tokens (BPE): {list(all_tokens_bpe)[:20]}\")\n",
+    "\n",
+    "# Step 7: Print the preprocessed first non-empty row for verification\n",
+    "first_non_empty_row = df.iloc[0]\n",
+    "print(\"\\nPreprocessed first non-empty row:\")\n",
+    "print(\"Input:\", first_non_empty_row['text'])\n",
+    "print(\"Target:\", first_non_empty_row['label'])"
+   ]
   }
  ],
  "metadata": {
