--- a/research notebooks/extract_and_tokenize_dataset.ipynb
+++ b/research notebooks/extract_and_tokenize_dataset.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,49 +43,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Preprocessed data saved to processed_2.csv\n",
       "First 5 data entries:\n",
-      "{'text': '', 'label': 'e_gam_239(X)^(*) e_del_219(X)^(*) to e_eps_36(X) e_eta_132(X) : Vertex V_1:e(X_2), e(X_4), OffShell A(V_1), Vertex V_0:e(X_1), e(X_3), OffShell A(V_0), : -1/2*i*e^2*gamma_{+%\\\\sigma_165,%gam_145,%gam_146}*gamma_{%\\\\sigma_165,%gam_147,%del_137}*e_{i_3,%gam_146}(p_1)_u*e_{k_3,%del_137}(p_2)_u*e_{l_3,%gam_145}(p_3)_u^(*)*e_{i_5,%gam_147}(p_4)_u^(*)/(m_e^2 + -s_13 + 1/2*reg_prop) : 2*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23 + -1/2*m_e^2*s_24 + 1/2*s_12*s_34)*(m_e^2 + -s_13 + 1/2*reg_prop)^(-2)'}\n",
-      "{'text': 'e_gam_[STATE_ID](X)^(*) e_del_[STATE_ID](X)^(*) to e_eps_[STATE_ID](X) e_eta_[STATE_ID](X) V_1 e(X) e(X) A(X) V_0 e(X) e(X) A(X) -1/2*i*e^2*gamma_{+%\\\\sigma_165 %%%gam_145_[STATE_ID]_[STATE_ID] %%%gam_146_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\sigma_165 %%%gam_147_[STATE_ID]_[STATE_ID] %%%del_137_[STATE_ID]_[STATE_ID]}*e_{i_3 %%%gam_146_[STATE_ID]_[STATE_ID]}(X)_u*e_{k_3 %%%del_137_[STATE_ID]_[STATE_ID]}(X)_u*e_{l_3 %%%gam_145_[STATE_ID]_[STATE_ID]}(X)_u^(*)*e_{i_5', 'label': '%gam_147}(p_4)_u^(*)/(m_e^2 + -s_13 + 1/2*reg_prop) : 2*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23 + -1/2*m_e^2*s_24 + 1/2*s_12*s_34)*(m_e^2 + -s_13 + 1/2*reg_prop)^(-2)'}\n",
-      "{'text': 'e_gam_[STATE_ID](X)^(*) e_del_[STATE_ID](X)^(*) to e_eps_[STATE_ID](X) e_eta_[STATE_ID](X) V_0 e(X) e(X) A(X) V_1 e(X) e(X) A(X) 1/2*i*e^2*gamma_{+%\\\\sigma_172 %%%gam_162_[STATE_ID]_[STATE_ID] %%%del_144_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\sigma_172 %%%gam_163_[STATE_ID]_[STATE_ID] %%%gam_164_[STATE_ID]_[STATE_ID]}*e_{i_3 %%%gam_164_[STATE_ID]_[STATE_ID]}(X)_u*e_{k_3 %%%del_144_[STATE_ID]_[STATE_ID]}(X)_u*e_{l_3 %%%gam_162_[STATE_ID]_[STATE_ID]}(X)_u^(*)*e_{i_5', 'label': '%gam_163}(p_4)_u^(*)/(m_e^2 + -s_23 + 1/2*reg_prop) : 2*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_23 + 1/2*s_13*s_24 + 1/2*s_12*s_34)*(m_e^2 + -s_23 + 1/2*reg_prop)^(-2)'}\n",
-      "{'text': 'e_gam_[STATE_ID](X)^(*) e_del_[STATE_ID](X)^(*) to e_eps_[STATE_ID](X) e_del_[STATE_ID](X) V_1 e(X) e(X) A(X) V_0 e(X) e(X) A(X) -1/2*i*e^2*gamma_{+%\\\\sigma_293 %%%gam_358_[STATE_ID]_[STATE_ID] %%%gam_359_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\sigma_293 %%%gam_360_[STATE_ID]_[STATE_ID] %%%del_271_[STATE_ID]_[STATE_ID]}*e_{i_27 %%%gam_360_[STATE_ID]_[STATE_ID]}(X)_u^(*)*e_{l_15 %%%gam_358_[STATE_ID]_[STATE_ID]}(X)_u^(*)*e_{k_15 %%%del_271_[STATE_ID]_[STATE_ID]}(X)_u*e_{j_5', 'label': '%gam_359}(p_1)_u/(m_e^2 + -s_13 + 1/2*reg_prop) : 2*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23 + -1/2*m_e^2*s_24 + 1/2*s_12*s_34)*(m_e^2 + -s_13 + 1/2*reg_prop)^(-2)'}\n",
-      "{'text': 'e_gam_[STATE_ID](X)^(*) e_del_[STATE_ID](X)^(*) to e_eps_[STATE_ID](X) e_del_[STATE_ID](X) V_0 e(X) e(X) A(X) V_1 e(X) e(X) A(X) 1/2*i*e^2*gamma_{+%\\\\sigma_301 %%%gam_377_[STATE_ID]_[STATE_ID] %%%del_278_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\sigma_301 %%%gam_378_[STATE_ID]_[STATE_ID] %%%gam_379_[STATE_ID]_[STATE_ID]}*e_{i_27 %%%gam_378_[STATE_ID]_[STATE_ID]}(X)_u^(*)*e_{l_15 %%%gam_377_[STATE_ID]_[STATE_ID]}(X)_u^(*)*e_{k_15 %%%del_278_[STATE_ID]_[STATE_ID]}(X)_u*e_{j_5', 'label': '%gam_379}(p_1)_u/(m_e^2 + -s_23 + 1/2*reg_prop) : 2*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_23 + 1/2*s_13*s_24 + 1/2*s_12*s_34)*(m_e^2 + -s_23 + 1/2*reg_prop)^(-2)'}\n"
+      "{'text': 'e_gam_[STATE_ID](X)^(*) e_del_[STATE_ID](X)^(*) to e_eps_[STATE_ID](X) e_eta_[STATE_ID](X) V_1 e(X) e(X) A(X) V_0 e(X) e(X) A(X) -1/2*i*e^2*gamma_{+%\\\\sigma_165 %%%gam_145_[STATE_ID]_[STATE_ID] %%%gam_146_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\sigma_165 %%%gam_147_[STATE_ID]_[STATE_ID] %%%del_137_[STATE_ID]_[STATE_ID]}*e_{i_3 %%%gam_146_[STATE_ID]_[STATE_ID]}(X)_u*e_{k_3 %%%del_137_[STATE_ID]_[STATE_ID]}(X)_u*e_{l_3 %%%gam_145_[STATE_ID]_[STATE_ID]}(X)_u^(*)*e_{i_5 %%%gam_147_[STATE_ID]_[STATE_ID]}(X)_u^(*)/(X)', 'label': '2*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23 + -1/2*m_e^2*s_24 + 1/2*s_12*s_34)*(m_e^2 + -s_13 + 1/2*reg_prop)^(-2)'}\n",
+      "{'text': 'e_gam_[STATE_ID](X)^(*) e_del_[STATE_ID](X)^(*) to e_eps_[STATE_ID](X) e_eta_[STATE_ID](X) V_0 e(X) e(X) A(X) V_1 e(X) e(X) A(X) 1/2*i*e^2*gamma_{+%\\\\sigma_172 %%%gam_162_[STATE_ID]_[STATE_ID] %%%del_144_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\sigma_172 %%%gam_163_[STATE_ID]_[STATE_ID] %%%gam_164_[STATE_ID]_[STATE_ID]}*e_{i_3 %%%gam_164_[STATE_ID]_[STATE_ID]}(X)_u*e_{k_3 %%%del_144_[STATE_ID]_[STATE_ID]}(X)_u*e_{l_3 %%%gam_162_[STATE_ID]_[STATE_ID]}(X)_u^(*)*e_{i_5 %%%gam_163_[STATE_ID]_[STATE_ID]}(X)_u^(*)/(X)', 'label': '2*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_23 + 1/2*s_13*s_24 + 1/2*s_12*s_34)*(m_e^2 + -s_23 + 1/2*reg_prop)^(-2)'}\n",
+      "{'text': 'e_gam_[STATE_ID](X)^(*) e_del_[STATE_ID](X)^(*) to e_eps_[STATE_ID](X) e_del_[STATE_ID](X) V_1 e(X) e(X) A(X) V_0 e(X) e(X) A(X) -1/2*i*e^2*gamma_{+%\\\\sigma_293 %%%gam_358_[STATE_ID]_[STATE_ID] %%%gam_359_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\sigma_293 %%%gam_360_[STATE_ID]_[STATE_ID] %%%del_271_[STATE_ID]_[STATE_ID]}*e_{i_27 %%%gam_360_[STATE_ID]_[STATE_ID]}(X)_u^(*)*e_{l_15 %%%gam_358_[STATE_ID]_[STATE_ID]}(X)_u^(*)*e_{k_15 %%%del_271_[STATE_ID]_[STATE_ID]}(X)_u*e_{j_5 %%%gam_359_[STATE_ID]_[STATE_ID]}(X)_u/(X)', 'label': '2*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23 + -1/2*m_e^2*s_24 + 1/2*s_12*s_34)*(m_e^2 + -s_13 + 1/2*reg_prop)^(-2)'}\n",
+      "{'text': 'e_gam_[STATE_ID](X)^(*) e_del_[STATE_ID](X)^(*) to e_eps_[STATE_ID](X) e_del_[STATE_ID](X) V_0 e(X) e(X) A(X) V_1 e(X) e(X) A(X) 1/2*i*e^2*gamma_{+%\\\\sigma_301 %%%gam_377_[STATE_ID]_[STATE_ID] %%%del_278_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\sigma_301 %%%gam_378_[STATE_ID]_[STATE_ID] %%%gam_379_[STATE_ID]_[STATE_ID]}*e_{i_27 %%%gam_378_[STATE_ID]_[STATE_ID]}(X)_u^(*)*e_{l_15 %%%gam_377_[STATE_ID]_[STATE_ID]}(X)_u^(*)*e_{k_15 %%%del_278_[STATE_ID]_[STATE_ID]}(X)_u*e_{j_5 %%%gam_379_[STATE_ID]_[STATE_ID]}(X)_u/(X)', 'label': '2*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_23 + 1/2*s_13*s_24 + 1/2*s_12*s_34)*(m_e^2 + -s_23 + 1/2*reg_prop)^(-2)'}\n",
+      "{'text': 'e_gam_[STATE_ID](X)^(*) e_del_[STATE_ID](X)^(*) to e_eps_[STATE_ID](X) e_eta_[STATE_ID](X) V_1 e(X) e(X) A(X) V_0 e(X) e(X) A(X) -i*e^2*gamma_{+%\\\\sigma_435 %%%gam_574_[STATE_ID]_[STATE_ID] %%%gam_575_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\sigma_435 %%%gam_576_[STATE_ID]_[STATE_ID] %%%del_406_[STATE_ID]_[STATE_ID]}*e_{i_43 %%%gam_576_[STATE_ID]_[STATE_ID]}(X)_u^(*)*e_{l_31 %%%gam_574_[STATE_ID]_[STATE_ID]}(X)_u^(*)*e_{k_31 %%%del_406_[STATE_ID]_[STATE_ID]}(X)_u*e_{j_21 %%%gam_575_[STATE_ID]_[STATE_ID]}(X)_u/(X)*s_13 + s_33 + reg_prop)', 'label': '8*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23 + -1/2*m_e^2*s_24 + 1/2*s_12*s_34)*(m_e^2 + (-2)*s_13 + s_33 + reg_prop)^(-2)'}\n",
+      "\n",
+      "Number of unique tokens in the dataset: 199725\n",
+      "Sample tokens: ['%%%gam_26368_[STATE_ID]_[STATE_ID]', '-1/3*i*e^2*gamma_{+%\\\\tau_566718', '%%%eta_52980_[STATE_ID]_[STATE_ID]}(X)_v^(*)*mu_{k_31329', '%%%eps_79217_[STATE_ID]_[STATE_ID]}(X)_u)/(X)', '%%%del_19086_[STATE_ID]_[STATE_ID]}*d_{i_18737', '%%%eps_16956_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\nu_53960', '%%%del_255654_[STATE_ID]_[STATE_ID]}(X)_v)/(X)*s_12', '%%%gam_108193_[STATE_ID]_[STATE_ID]}(X)_v^(*)*d_{j_99632', '%%%gam_343050_[STATE_ID]_[STATE_ID]', '%%%gam_288652_[STATE_ID]_[STATE_ID]', '%%%eta_152336_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\tau_105572', '%%%gam_25647_[STATE_ID]_[STATE_ID]}(X)_u^(*)*d_{i_19149', '%%%del_143452_[STATE_ID]_[STATE_ID]}(X)_v*b_{l_166311', '%%%gam_321249_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\tau_654745', '%%%beta_82922_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\nu_333741', '%%%del_145322_[STATE_ID]_[STATE_ID]}(X)_u*tt_{i_116865', 'p_1_%\\\\sigma_648133*gamma_{%\\\\sigma_648132', '%%%eta_164889_[STATE_ID]_[STATE_ID]', 's_alpha_18803(X)^(*)', '%%%gam_139397_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\tau_145626']\n"
      ]
     }
    ],
    "source": [
     "import re\n",
+    "import pandas as pd\n",
     "\n",
-    "data = []# Replace with your file path\n",
-    "current_block = \"\"\n",
+    "# Initialize list to store data\n",
+    "data = []\n",
+    "  # Replace with your file path\n",
     "\n",
+    "# Read the file and process each line\n",
     "with open(input_file, 'r') as file:\n",
     "    for line in file:\n",
-    "        # If your file has blocks with 'Interaction:', use block accumulation\n",
-    "        # Otherwise, treat as CSV line\n",
-    "        if 'Interaction:' in line and current_block:\n",
-    "            match = re.search(r'Interaction:(.*),(.*)', current_block, re.DOTALL)\n",
-    "            if match:\n",
-    "                input_text = match.group(1).strip()\n",
-    "                squared_amplitude = match.group(2).strip()\n",
-    "            else:\n",
-    "                current_block = line\n",
-    "                continue\n",
-    "        else:\n",
-    "            # Treat as CSV line, handle colon as separator\n",
-    "            match = re.search(r'(.*?)\\s*:\\s*(.*)', line.strip(), re.DOTALL)\n",
-    "            if match:\n",
-    "                input_text = match.group(1).strip()\n",
-    "                squared_amplitude = match.group(2).strip()\n",
-    "            else:\n",
-    "                current_block += line\n",
-    "                continue\n",
+    "        # Remove leading/trailing whitespace\n",
+    "        line = line.strip()\n",
+    "        if not line:  # Skip empty lines\n",
+    "            continue\n",
+    "\n",
+    "        # Find the last colon in the line to separate text and label\n",
+    "        last_colon_index = line.rfind(':')\n",
+    "        if last_colon_index == -1:  # No colon found, skip the line\n",
+    "            print(f\"Skipping line (no colon found): {line}\")\n",
+    "            continue\n",
+    "\n",
+    "        # Split the line into text (before last colon) and label (after last colon)\n",
+    "        input_text = line[:last_colon_index].strip()\n",
+    "        squared_amplitude = line[last_colon_index + 1:].strip()\n",
     "\n",
     "        # Cleaning steps for input_text\n",
     "        # 1. Remove irrelevant terms\n",
@@ -134,52 +136,30 @@
     "            'label': squared_amplitude\n",
     "        })\n",
     "\n",
-    "        # Reset current_block if processing blocks\n",
-    "        if 'Interaction:' in line:\n",
-    "            current_block = line\n",
-    "        else:\n",
-    "            current_block = \"\"\n",
-    "\n",
-    "    # Handle the last block (if using block structure)\n",
-    "    if current_block:\n",
-    "        match = re.search(r'Interaction:(.*),(.*)', current_block, re.DOTALL)\n",
-    "        if match:\n",
-    "            input_text = match.group(1).strip()\n",
-    "            squared_amplitude = match.group(2).strip()\n",
-    "\n",
-    "            # Apply same cleaning steps\n",
-    "            input_text = re.sub(r'\\bInteraction\\b', '', input_text)\n",
-    "            input_text = re.sub(r'\\bOffShell\\b', '', input_text)\n",
-    "            input_text = re.sub(r'\\bVertex\\b', '', input_text)\n",
-    "            input_text = re.sub(r'(e|c|u|X)_(\\w+)_\\d+', r'\\1_\\2_[STATE_ID]', input_text)\n",
-    "            input_text = re.sub(r'%\\w+_(\\d+)', r'%\\g<0>_[STATE_ID]', input_text)\n",
-    "            input_text = re.sub(r'%(\\w+)_\\d+_[STATE_ID]', r'%\\1_[STATE_ID]', input_text)\n",
-    "            input_text = re.sub(r'(\\w+)_{(\\w+)_(\\d+),(%\\w+_\\d+)}', r'\\1_{\\2_[STATE_ID],\\4_[STATE_ID]}', input_text)\n",
-    "            input_text = re.sub(r'%\\w+_(\\d+)', r'%\\g<0>_[STATE_ID]', input_text)\n",
-    "            input_text = re.sub(r'%(\\w+)_\\d+_[STATE_ID]', r'%\\1_[STATE_ID]', input_text)\n",
-    "            input_text = re.sub(r'\\((.*?)\\)', '(X)', input_text)\n",
-    "            input_text = re.sub(r'\\^\\((.*?)\\)', '^(*)', input_text)\n",
-    "            input_text = re.sub(r'u_\\(\\*\\)', 'u_(*)', input_text)\n",
-    "            input_text = re.sub(r'v_\\(\\*\\)', 'v_(*)', input_text)\n",
-    "            input_text = re.sub(r':+', ' ', input_text)\n",
-    "            input_text = re.sub(r'[\"\\']', '', input_text)\n",
-    "            input_text = re.sub(r',+', ',', input_text)\n",
-    "            input_text = re.sub(r',\\s*', ' ', input_text)\n",
-    "            input_text = re.sub(r'\\s+', ' ', input_text).strip()\n",
-    "            input_text = re.sub(r'^,+|,+$', '', input_text)\n",
-    "\n",
-    "            squared_amplitude = re.sub(r'[\"\\']', '', squared_amplitude)\n",
-    "            squared_amplitude = re.sub(r'\\s+', ' ', squared_amplitude).strip()\n",
-    "\n",
-    "            data.append({\n",
-    "                'text': input_text,\n",
-    "                'label': squared_amplitude\n",
-    "            })\n",
+    "# Convert to DataFrame and save as CSV\n",
+    "df = pd.DataFrame(data)\n",
+    "output_csv_path = \"processed_2.csv\"  # Replace with desired path\n",
+    "df.to_csv(output_csv_path, index=False)\n",
+    "print(f\"Preprocessed data saved to {output_csv_path}\")\n",
     "\n",
     "# Debugging: Print first 5 entries\n",
     "print(\"First 5 data entries:\")\n",
     "for entry in data[:5]:\n",
-    "    print(entry)"
+    "    print(entry)\n",
+    "\n",
+    "# Step 2: Calculate unique tokens\n",
+    "# Combine all text from both columns\n",
+    "all_texts = df['text'].astype(str).tolist() + df['label'].astype(str).tolist()\n",
+    "\n",
+    "# Tokenize using whitespace and count unique tokens\n",
+    "all_tokens = set()\n",
+    "for text in all_texts:\n",
+    "    tokens = text.split()\n",
+    "    all_tokens.update(tokens)\n",
+    "\n",
+    "# Print the results\n",
+    "print(f\"\\nNumber of unique tokens in the dataset: {len(all_tokens)}\")\n",
+    "print(f\"Sample tokens: {list(all_tokens)[:20]}\")"
    ]
   },
   {
